libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/fn-generics-duplicates.jsonc
//@ run: fail
//@ description: duplicate generics should fail to compile
[
  "::kernel::special_form::fn",
  { "#tuple": ["T", "T"] },
  //~^ ERROR Remove this duplicate generic parameter 'T'
  { "#struct": {} },
  "_",
  ["+", "a", "b"]
]
